GPL/p4/y.output
Useless nonterminals

   animation_parameter


Terminals which are not used

   "error"


Useless rules

  128 animation_parameter: object_type "identifier"


State 134 conflicts: 6 shift/reduce
State 199 conflicts: 6 shift/reduce
State 210 conflicts: 5 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declaration_list block_list

    2 declaration_list: declaration_list declaration
    3                 | empty

    4 declaration: variable_declaration ";"
    5            | object_declaration ";"
    6            | forward_declaration ";"

    7 variable_declaration: simple_type "identifier" optional_initializer
    8                     | simple_type "identifier" "[" expression "]"

    9 simple_type: "int"
   10            | "double"
   11            | "string"

   12 optional_initializer: "=" expression
   13                     | empty

   14 object_declaration: object_type "identifier" "(" parameter_list_or_empty ")"
   15                   | object_type "identifier" "[" expression "]"

   16 object_type: "triangle"
   17            | "pixmap"
   18            | "circle"
   19            | "rectangle"
   20            | "textbox"

   21 parameter_list_or_empty: parameter_list
   22                        | empty

   23 parameter_list: parameter_list "," parameter
   24               | parameter

   25 parameter: "identifier" "=" expression

   26 forward_declaration: "forward" "animation" "identifier" "(" object_type "identifier" ")"

   27 block_list: block_list block
   28           | empty

   29 block: initialization_block
   30      | termination_block
   31      | animation_block
   32      | on_block

   33 initialization_block: "initialization" statement_block

   34 termination_block: "termination" statement_block

   35 animation_block: "animation" "identifier" "(" check_animation_parameter ")" "{" statement_list "}" end_of_statement_block

   36 check_animation_parameter: object_type "identifier"

   37 on_block: "on" keystroke statement_block

   38 keystroke: "space"
   39          | "leftarrow"
   40          | "rightarrow"
   41          | "uparrow"
   42          | "downarrow"
   43          | "leftmouse_down"
   44          | "middlemouse_down"
   45          | "rightmouse_down"
   46          | "leftmouse_up"
   47          | "middlemouse_up"
   48          | "rightmouse_up"
   49          | "mouse_move"
   50          | "mouse_drag"
   51          | "f1"
   52          | "akey"
   53          | "skey"
   54          | "dkey"
   55          | "fkey"
   56          | "hkey"
   57          | "jkey"
   58          | "kkey"
   59          | "lkey"
   60          | "wkey"
   61          | "zkey"

   62 if_block: statement_block_creator statement end_of_statement_block
   63         | statement_block

   64 statement_block: "{" statement_block_creator statement_list "}" end_of_statement_block

   65 statement_block_creator: /* empty */

   66 end_of_statement_block: /* empty */

   67 statement_list: statement_list statement
   68               | empty

   69 statement: /* empty */
   70          | assign_statement ";"
   71          | if_statement
   72          | print_statement ";"
   73          | exit_statement ";"
   74          | for_statement

   75 if_statement: "if" "(" expression ")" if_block
   76             | "if" "(" expression ")" if_block "else" if_block

   77 for_statement: "for" "(" statement_block_creator assign_statement_or_empty end_of_statement_block ";" expression ";" statement_block_creator assign_statement_or_empty end_of_statement_block ")" statement_block

   78 print_statement: "print" "(" expression ")"

   79 exit_statement: "exit" "(" expression ")"

   80 assign_statement_or_empty: assign_statement
   81                          | empty

   82 assign_statement: variable "=" expression
   83                 | variable "+=" expression
   84                 | variable "-=" expression
   85                 | variable "++"
   86                 | variable "--"

   87 variable: "identifier"
   88         | "identifier" "[" expression "]"
   89         | "identifier" "." "identifier"
   90         | "identifier" "[" expression "]" "." "identifier"

   91 expression: primary_expression
   92           | expression "||" expression
   93           | expression "&&" expression
   94           | expression "<=" expression
   95           | expression ">=" expression
   96           | expression "<" expression
   97           | expression ">" expression
   98           | expression "==" expression
   99           | expression "!=" expression
  100           | expression "+" expression
  101           | expression "-" expression
  102           | expression "*" expression
  103           | expression "/" expression
  104           | expression "%" expression
  105           | "-" expression
  106           | "!" expression
  107           | math_operator "(" expression ")"
  108           | expression "near" expression
  109           | expression "touches" expression

  110 primary_expression: "(" expression ")"
  111                   | variable
  112                   | "int constant"
  113                   | "true"
  114                   | "false"
  115                   | "double constant"
  116                   | "string constant"

  117 math_operator: "sin"
  118              | "cos"
  119              | "tan"
  120              | "asin"
  121              | "acos"
  122              | "atan"
  123              | "sqrt"
  124              | "abs"
  125              | "floor"
  126              | "random"

  127 empty: /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
"int" (258) 9
"double" (259) 10
"string" (260) 11
"triangle" (261) 16
"pixmap" (262) 17
"circle" (263) 18
"rectangle" (264) 19
"textbox" (265) 20
"forward" (266) 26
"initialization" (267) 33
"termination" (268) 34
"true" (269) 113
"false" (270) 114
"on" (271) 37
"space" (272) 38
"leftarrow" (273) 39
"rightarrow" (274) 40
"uparrow" (275) 41
"downarrow" (276) 42
"leftmouse_down" (277) 43
"middlemouse_down" (278) 44
"rightmouse_down" (279) 45
"leftmouse_up" (280) 46
"middlemouse_up" (281) 47
"rightmouse_up" (282) 48
"mouse_move" (283) 49
"mouse_drag" (284) 50
"f1" (285) 51
"akey" (286) 52
"skey" (287) 53
"dkey" (288) 54
"fkey" (289) 55
"hkey" (290) 56
"jkey" (291) 57
"kkey" (292) 58
"lkey" (293) 59
"wkey" (294) 60
"zkey" (295) 61
"touches" (296) 109
"near" (297) 108
"animation" (298) 26 35
"if" (299) 75 76
"for" (300) 77
"else" (301) 76
"print" (302) 78
"exit" (303) 79
"(" (304) 14 26 35 75 76 77 78 79 107 110
")" (305) 14 26 35 75 76 77 78 79 107 110
"{" (306) 35 64
"}" (307) 35 64
"[" (308) 8 15 88 90
"]" (309) 8 15 88 90
";" (310) 4 5 6 70 72 73 77
"," (311) 23
"." (312) 89 90
"=" (313) 12 25 82
"+=" (314) 83
"-=" (315) 84
"++" (316) 85
"--" (317) 86
"*" (318) 102
"/" (319) 103
"%" (320) 104
"+" (321) 100
"-" (322) 101 105
"sin" (323) 117
"cos" (324) 118
"tan" (325) 119
"asin" (326) 120
"acos" (327) 121
"atan" (328) 122
"sqrt" (329) 123
"floor" (330) 125
"abs" (331) 124
"random" (332) 126
"<" (333) 96
">" (334) 97
"<=" (335) 94
">=" (336) 95
"==" (337) 98
"!=" (338) 99
"&&" (339) 93
"||" (340) 92
"!" (341) 106
"identifier" (342) 7 8 14 15 25 26 35 36 87 88 89 90
"int constant" (343) 112
"double constant" (344) 115
"string constant" (345) 116
"error" (346)
IF_NO_ELSE (347)
UNARY_OPS (348)


Nonterminals, with rules where they appear

$accept (94)
    on left: 0
program (95)
    on left: 1, on right: 0
declaration_list (96)
    on left: 2 3, on right: 1 2
declaration (97)
    on left: 4 5 6, on right: 2
variable_declaration (98)
    on left: 7 8, on right: 4
simple_type (99)
    on left: 9 10 11, on right: 7 8
optional_initializer (100)
    on left: 12 13, on right: 7
object_declaration (101)
    on left: 14 15, on right: 5
object_type (102)
    on left: 16 17 18 19 20, on right: 14 15 26 36
parameter_list_or_empty (103)
    on left: 21 22, on right: 14
parameter_list (104)
    on left: 23 24, on right: 21 23
parameter (105)
    on left: 25, on right: 23 24
forward_declaration (106)
    on left: 26, on right: 6
block_list (107)
    on left: 27 28, on right: 1 27
block (108)
    on left: 29 30 31 32, on right: 27
initialization_block (109)
    on left: 33, on right: 29
termination_block (110)
    on left: 34, on right: 30
animation_block (111)
    on left: 35, on right: 31
check_animation_parameter (112)
    on left: 36, on right: 35
on_block (113)
    on left: 37, on right: 32
keystroke (114)
    on left: 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55
    56 57 58 59 60 61, on right: 37
if_block (115)
    on left: 62 63, on right: 75 76
statement_block (116)
    on left: 64, on right: 33 34 37 63 77
statement_block_creator (117)
    on left: 65, on right: 62 64 77
end_of_statement_block (118)
    on left: 66, on right: 35 62 64 77
statement_list (119)
    on left: 67 68, on right: 35 64 67
statement (120)
    on left: 69 70 71 72 73 74, on right: 62 67
if_statement (121)
    on left: 75 76, on right: 71
for_statement (122)
    on left: 77, on right: 74
print_statement (123)
    on left: 78, on right: 72
exit_statement (124)
    on left: 79, on right: 73
assign_statement_or_empty (125)
    on left: 80 81, on right: 77
assign_statement (126)
    on left: 82 83 84 85 86, on right: 70 80
variable (127)
    on left: 87 88 89 90, on right: 82 83 84 85 86 111
expression (128)
    on left: 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106
    107 108 109, on right: 8 12 15 25 75 76 77 78 79 82 83 84 88 90
    92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109
    110
primary_expression (129)
    on left: 110 111 112 113 114 115 116, on right: 91
math_operator (130)
    on left: 117 118 119 120 121 122 123 124 125 126,
    on right: 107
empty (131)
    on left: 127, on right: 3 13 22 28 68 81


state 0

    0 $accept: . program $end

    $default  reduce using rule 127 (empty)

    program           go to state 1
    declaration_list  go to state 2
    empty             go to state 3


state 1

    0 $accept: program . $end

    $end  shift, and go to state 4


state 2

    1 program: declaration_list . block_list
    2 declaration_list: declaration_list . declaration

    "int"        shift, and go to state 5
    "double"     shift, and go to state 6
    "string"     shift, and go to state 7
    "triangle"   shift, and go to state 8
    "pixmap"     shift, and go to state 9
    "circle"     shift, and go to state 10
    "rectangle"  shift, and go to state 11
    "textbox"    shift, and go to state 12
    "forward"    shift, and go to state 13

    $default  reduce using rule 127 (empty)

    declaration           go to state 14
    variable_declaration  go to state 15
    simple_type           go to state 16
    object_declaration    go to state 17
    object_type           go to state 18
    forward_declaration   go to state 19
    block_list            go to state 20
    empty                 go to state 21


state 3

    3 declaration_list: empty .

    $default  reduce using rule 3 (declaration_list)


state 4

    0 $accept: program $end .

    $default  accept


state 5

    9 simple_type: "int" .

    $default  reduce using rule 9 (simple_type)


state 6

   10 simple_type: "double" .

    $default  reduce using rule 10 (simple_type)


state 7

   11 simple_type: "string" .

    $default  reduce using rule 11 (simple_type)


state 8

   16 object_type: "triangle" .

    $default  reduce using rule 16 (object_type)


state 9

   17 object_type: "pixmap" .

    $default  reduce using rule 17 (object_type)


state 10

   18 object_type: "circle" .

    $default  reduce using rule 18 (object_type)


state 11

   19 object_type: "rectangle" .

    $default  reduce using rule 19 (object_type)


state 12

   20 object_type: "textbox" .

    $default  reduce using rule 20 (object_type)


state 13

   26 forward_declaration: "forward" . "animation" "identifier" "(" object_type "identifier" ")"

    "animation"  shift, and go to state 22


state 14

    2 declaration_list: declaration_list declaration .

    $default  reduce using rule 2 (declaration_list)


state 15

    4 declaration: variable_declaration . ";"

    ";"  shift, and go to state 23


state 16

    7 variable_declaration: simple_type . "identifier" optional_initializer
    8                     | simple_type . "identifier" "[" expression "]"

    "identifier"  shift, and go to state 24


state 17

    5 declaration: object_declaration . ";"

    ";"  shift, and go to state 25


state 18

   14 object_declaration: object_type . "identifier" "(" parameter_list_or_empty ")"
   15                   | object_type . "identifier" "[" expression "]"

    "identifier"  shift, and go to state 26


state 19

    6 declaration: forward_declaration . ";"

    ";"  shift, and go to state 27


state 20

    1 program: declaration_list block_list .
   27 block_list: block_list . block

    "initialization"  shift, and go to state 28
    "termination"     shift, and go to state 29
    "on"              shift, and go to state 30
    "animation"       shift, and go to state 31

    $default  reduce using rule 1 (program)

    block                 go to state 32
    initialization_block  go to state 33
    termination_block     go to state 34
    animation_block       go to state 35
    on_block              go to state 36


state 21

   28 block_list: empty .

    $default  reduce using rule 28 (block_list)


state 22

   26 forward_declaration: "forward" "animation" . "identifier" "(" object_type "identifier" ")"

    "identifier"  shift, and go to state 37


state 23

    4 declaration: variable_declaration ";" .

    $default  reduce using rule 4 (declaration)


state 24

    7 variable_declaration: simple_type "identifier" . optional_initializer
    8                     | simple_type "identifier" . "[" expression "]"

    "["  shift, and go to state 38
    "="  shift, and go to state 39

    $default  reduce using rule 127 (empty)

    optional_initializer  go to state 40
    empty                 go to state 41


state 25

    5 declaration: object_declaration ";" .

    $default  reduce using rule 5 (declaration)


state 26

   14 object_declaration: object_type "identifier" . "(" parameter_list_or_empty ")"
   15                   | object_type "identifier" . "[" expression "]"

    "("  shift, and go to state 42
    "["  shift, and go to state 43


state 27

    6 declaration: forward_declaration ";" .

    $default  reduce using rule 6 (declaration)


state 28

   33 initialization_block: "initialization" . statement_block

    "{"  shift, and go to state 44

    statement_block  go to state 45


state 29

   34 termination_block: "termination" . statement_block

    "{"  shift, and go to state 44

    statement_block  go to state 46


state 30

   37 on_block: "on" . keystroke statement_block

    "space"             shift, and go to state 47
    "leftarrow"         shift, and go to state 48
    "rightarrow"        shift, and go to state 49
    "uparrow"           shift, and go to state 50
    "downarrow"         shift, and go to state 51
    "leftmouse_down"    shift, and go to state 52
    "middlemouse_down"  shift, and go to state 53
    "rightmouse_down"   shift, and go to state 54
    "leftmouse_up"      shift, and go to state 55
    "middlemouse_up"    shift, and go to state 56
    "rightmouse_up"     shift, and go to state 57
    "mouse_move"        shift, and go to state 58
    "mouse_drag"        shift, and go to state 59
    "f1"                shift, and go to state 60
    "akey"              shift, and go to state 61
    "skey"              shift, and go to state 62
    "dkey"              shift, and go to state 63
    "fkey"              shift, and go to state 64
    "hkey"              shift, and go to state 65
    "jkey"              shift, and go to state 66
    "kkey"              shift, and go to state 67
    "lkey"              shift, and go to state 68
    "wkey"              shift, and go to state 69
    "zkey"              shift, and go to state 70

    keystroke  go to state 71


state 31

   35 animation_block: "animation" . "identifier" "(" check_animation_parameter ")" "{" statement_list "}" end_of_statement_block

    "identifier"  shift, and go to state 72


state 32

   27 block_list: block_list block .

    $default  reduce using rule 27 (block_list)


state 33

   29 block: initialization_block .

    $default  reduce using rule 29 (block)


state 34

   30 block: termination_block .

    $default  reduce using rule 30 (block)


state 35

   31 block: animation_block .

    $default  reduce using rule 31 (block)


state 36

   32 block: on_block .

    $default  reduce using rule 32 (block)


state 37

   26 forward_declaration: "forward" "animation" "identifier" . "(" object_type "identifier" ")"

    "("  shift, and go to state 73


state 38

    8 variable_declaration: simple_type "identifier" "[" . expression "]"

    "true"             shift, and go to state 74
    "false"            shift, and go to state 75
    "("                shift, and go to state 76
    "-"                shift, and go to state 77
    "sin"              shift, and go to state 78
    "cos"              shift, and go to state 79
    "tan"              shift, and go to state 80
    "asin"             shift, and go to state 81
    "acos"             shift, and go to state 82
    "atan"             shift, and go to state 83
    "sqrt"             shift, and go to state 84
    "floor"            shift, and go to state 85
    "abs"              shift, and go to state 86
    "random"           shift, and go to state 87
    "!"                shift, and go to state 88
    "identifier"       shift, and go to state 89
    "int constant"     shift, and go to state 90
    "double constant"  shift, and go to state 91
    "string constant"  shift, and go to state 92

    variable            go to state 93
    expression          go to state 94
    primary_expression  go to state 95
    math_operator       go to state 96


state 39

   12 optional_initializer: "=" . expression

    "true"             shift, and go to state 74
    "false"            shift, and go to state 75
    "("                shift, and go to state 76
    "-"                shift, and go to state 77
    "sin"              shift, and go to state 78
    "cos"              shift, and go to state 79
    "tan"              shift, and go to state 80
    "asin"             shift, and go to state 81
    "acos"             shift, and go to state 82
    "atan"             shift, and go to state 83
    "sqrt"             shift, and go to state 84
    "floor"            shift, and go to state 85
    "abs"              shift, and go to state 86
    "random"           shift, and go to state 87
    "!"                shift, and go to state 88
    "identifier"       shift, and go to state 89
    "int constant"     shift, and go to state 90
    "double constant"  shift, and go to state 91
    "string constant"  shift, and go to state 92

    variable            go to state 93
    expression          go to state 97
    primary_expression  go to state 95
    math_operator       go to state 96


state 40

    7 variable_declaration: simple_type "identifier" optional_initializer .

    $default  reduce using rule 7 (variable_declaration)


state 41

   13 optional_initializer: empty .

    $default  reduce using rule 13 (optional_initializer)


state 42

   14 object_declaration: object_type "identifier" "(" . parameter_list_or_empty ")"

    "identifier"  shift, and go to state 98

    $default  reduce using rule 127 (empty)

    parameter_list_or_empty  go to state 99
    parameter_list           go to state 100
    parameter                go to state 101
    empty                    go to state 102


state 43

   15 object_declaration: object_type "identifier" "[" . expression "]"

    "true"             shift, and go to state 74
    "false"            shift, and go to state 75
    "("                shift, and go to state 76
    "-"                shift, and go to state 77
    "sin"              shift, and go to state 78
    "cos"              shift, and go to state 79
    "tan"              shift, and go to state 80
    "asin"             shift, and go to state 81
    "acos"             shift, and go to state 82
    "atan"             shift, and go to state 83
    "sqrt"             shift, and go to state 84
    "floor"            shift, and go to state 85
    "abs"              shift, and go to state 86
    "random"           shift, and go to state 87
    "!"                shift, and go to state 88
    "identifier"       shift, and go to state 89
    "int constant"     shift, and go to state 90
    "double constant"  shift, and go to state 91
    "string constant"  shift, and go to state 92

    variable            go to state 93
    expression          go to state 103
    primary_expression  go to state 95
    math_operator       go to state 96


state 44

   64 statement_block: "{" . statement_block_creator statement_list "}" end_of_statement_block

    $default  reduce using rule 65 (statement_block_creator)

    statement_block_creator  go to state 104


state 45

   33 initialization_block: "initialization" statement_block .

    $default  reduce using rule 33 (initialization_block)


state 46

   34 termination_block: "termination" statement_block .

    $default  reduce using rule 34 (termination_block)


state 47

   38 keystroke: "space" .

    $default  reduce using rule 38 (keystroke)


state 48

   39 keystroke: "leftarrow" .

    $default  reduce using rule 39 (keystroke)


state 49

   40 keystroke: "rightarrow" .

    $default  reduce using rule 40 (keystroke)


state 50

   41 keystroke: "uparrow" .

    $default  reduce using rule 41 (keystroke)


state 51

   42 keystroke: "downarrow" .

    $default  reduce using rule 42 (keystroke)


state 52

   43 keystroke: "leftmouse_down" .

    $default  reduce using rule 43 (keystroke)


state 53

   44 keystroke: "middlemouse_down" .

    $default  reduce using rule 44 (keystroke)


state 54

   45 keystroke: "rightmouse_down" .

    $default  reduce using rule 45 (keystroke)


state 55

   46 keystroke: "leftmouse_up" .

    $default  reduce using rule 46 (keystroke)


state 56

   47 keystroke: "middlemouse_up" .

    $default  reduce using rule 47 (keystroke)


state 57

   48 keystroke: "rightmouse_up" .

    $default  reduce using rule 48 (keystroke)


state 58

   49 keystroke: "mouse_move" .

    $default  reduce using rule 49 (keystroke)


state 59

   50 keystroke: "mouse_drag" .

    $default  reduce using rule 50 (keystroke)


state 60

   51 keystroke: "f1" .

    $default  reduce using rule 51 (keystroke)


state 61

   52 keystroke: "akey" .

    $default  reduce using rule 52 (keystroke)


state 62

   53 keystroke: "skey" .

    $default  reduce using rule 53 (keystroke)


state 63

   54 keystroke: "dkey" .

    $default  reduce using rule 54 (keystroke)


state 64

   55 keystroke: "fkey" .

    $default  reduce using rule 55 (keystroke)


state 65

   56 keystroke: "hkey" .

    $default  reduce using rule 56 (keystroke)


state 66

   57 keystroke: "jkey" .

    $default  reduce using rule 57 (keystroke)


state 67

   58 keystroke: "kkey" .

    $default  reduce using rule 58 (keystroke)


state 68

   59 keystroke: "lkey" .

    $default  reduce using rule 59 (keystroke)


state 69

   60 keystroke: "wkey" .

    $default  reduce using rule 60 (keystroke)


state 70

   61 keystroke: "zkey" .

    $default  reduce using rule 61 (keystroke)


state 71

   37 on_block: "on" keystroke . statement_block

    "{"  shift, and go to state 44

    statement_block  go to state 105


state 72

   35 animation_block: "animation" "identifier" . "(" check_animation_parameter ")" "{" statement_list "}" end_of_statement_block

    "("  shift, and go to state 106


state 73

   26 forward_declaration: "forward" "animation" "identifier" "(" . object_type "identifier" ")"

    "triangle"   shift, and go to state 8
    "pixmap"     shift, and go to state 9
    "circle"     shift, and go to state 10
    "rectangle"  shift, and go to state 11
    "textbox"    shift, and go to state 12

    object_type  go to state 107


state 74

  113 primary_expression: "true" .

    $default  reduce using rule 113 (primary_expression)


state 75

  114 primary_expression: "false" .

    $default  reduce using rule 114 (primary_expression)


state 76

  110 primary_expression: "(" . expression ")"

    "true"             shift, and go to state 74
    "false"            shift, and go to state 75
    "("                shift, and go to state 76
    "-"                shift, and go to state 77
    "sin"              shift, and go to state 78
    "cos"              shift, and go to state 79
    "tan"              shift, and go to state 80
    "asin"             shift, and go to state 81
    "acos"             shift, and go to state 82
    "atan"             shift, and go to state 83
    "sqrt"             shift, and go to state 84
    "floor"            shift, and go to state 85
    "abs"              shift, and go to state 86
    "random"           shift, and go to state 87
    "!"                shift, and go to state 88
    "identifier"       shift, and go to state 89
    "int constant"     shift, and go to state 90
    "double constant"  shift, and go to state 91
    "string constant"  shift, and go to state 92

    variable            go to state 93
    expression          go to state 108
    primary_expression  go to state 95
    math_operator       go to state 96


state 77

  105 expression: "-" . expression

    "true"             shift, and go to state 74
    "false"            shift, and go to state 75
    "("                shift, and go to state 76
    "-"                shift, and go to state 77
    "sin"              shift, and go to state 78
    "cos"              shift, and go to state 79
    "tan"              shift, and go to state 80
    "asin"             shift, and go to state 81
    "acos"             shift, and go to state 82
    "atan"             shift, and go to state 83
    "sqrt"             shift, and go to state 84
    "floor"            shift, and go to state 85
    "abs"              shift, and go to state 86
    "random"           shift, and go to state 87
    "!"                shift, and go to state 88
    "identifier"       shift, and go to state 89
    "int constant"     shift, and go to state 90
    "double constant"  shift, and go to state 91
    "string constant"  shift, and go to state 92

    variable            go to state 93
    expression          go to state 109
    primary_expression  go to state 95
    math_operator       go to state 96


state 78

  117 math_operator: "sin" .

    $default  reduce using rule 117 (math_operator)


state 79

  118 math_operator: "cos" .

    $default  reduce using rule 118 (math_operator)


state 80

  119 math_operator: "tan" .

    $default  reduce using rule 119 (math_operator)


state 81

  120 math_operator: "asin" .

    $default  reduce using rule 120 (math_operator)


state 82

  121 math_operator: "acos" .

    $default  reduce using rule 121 (math_operator)


state 83

  122 math_operator: "atan" .

    $default  reduce using rule 122 (math_operator)


state 84

  123 math_operator: "sqrt" .

    $default  reduce using rule 123 (math_operator)


state 85

  125 math_operator: "floor" .

    $default  reduce using rule 125 (math_operator)


state 86

  124 math_operator: "abs" .

    $default  reduce using rule 124 (math_operator)


state 87

  126 math_operator: "random" .

    $default  reduce using rule 126 (math_operator)


state 88

  106 expression: "!" . expression

    "true"             shift, and go to state 74
    "false"            shift, and go to state 75
    "("                shift, and go to state 76
    "-"                shift, and go to state 77
    "sin"              shift, and go to state 78
    "cos"              shift, and go to state 79
    "tan"              shift, and go to state 80
    "asin"             shift, and go to state 81
    "acos"             shift, and go to state 82
    "atan"             shift, and go to state 83
    "sqrt"             shift, and go to state 84
    "floor"            shift, and go to state 85
    "abs"              shift, and go to state 86
    "random"           shift, and go to state 87
    "!"                shift, and go to state 88
    "identifier"       shift, and go to state 89
    "int constant"     shift, and go to state 90
    "double constant"  shift, and go to state 91
    "string constant"  shift, and go to state 92

    variable            go to state 93
    expression          go to state 110
    primary_expression  go to state 95
    math_operator       go to state 96


state 89

   87 variable: "identifier" .
   88         | "identifier" . "[" expression "]"
   89         | "identifier" . "." "identifier"
   90         | "identifier" . "[" expression "]" "." "identifier"

    "["  shift, and go to state 111
    "."  shift, and go to state 112

    $default  reduce using rule 87 (variable)


state 90

  112 primary_expression: "int constant" .

    $default  reduce using rule 112 (primary_expression)


state 91

  115 primary_expression: "double constant" .

    $default  reduce using rule 115 (primary_expression)


state 92

  116 primary_expression: "string constant" .

    $default  reduce using rule 116 (primary_expression)


state 93

  111 primary_expression: variable .

    $default  reduce using rule 111 (primary_expression)


state 94

    8 variable_declaration: simple_type "identifier" "[" expression . "]"
   92 expression: expression . "||" expression
   93           | expression . "&&" expression
   94           | expression . "<=" expression
   95           | expression . ">=" expression
   96           | expression . "<" expression
   97           | expression . ">" expression
   98           | expression . "==" expression
   99           | expression . "!=" expression
  100           | expression . "+" expression
  101           | expression . "-" expression
  102           | expression . "*" expression
  103           | expression . "/" expression
  104           | expression . "%" expression
  108           | expression . "near" expression
  109           | expression . "touches" expression

    "touches"  shift, and go to state 113
    "near"     shift, and go to state 114
    "]"        shift, and go to state 115
    "*"        shift, and go to state 116
    "/"        shift, and go to state 117
    "%"        shift, and go to state 118
    "+"        shift, and go to state 119
    "-"        shift, and go to state 120
    "<"        shift, and go to state 121
    ">"        shift, and go to state 122
    "<="       shift, and go to state 123
    ">="       shift, and go to state 124
    "=="       shift, and go to state 125
    "!="       shift, and go to state 126
    "&&"       shift, and go to state 127
    "||"       shift, and go to state 128


state 95

   91 expression: primary_expression .

    $default  reduce using rule 91 (expression)


state 96

  107 expression: math_operator . "(" expression ")"

    "("  shift, and go to state 129


state 97

   12 optional_initializer: "=" expression .
   92 expression: expression . "||" expression
   93           | expression . "&&" expression
   94           | expression . "<=" expression
   95           | expression . ">=" expression
   96           | expression . "<" expression
   97           | expression . ">" expression
   98           | expression . "==" expression
   99           | expression . "!=" expression
  100           | expression . "+" expression
  101           | expression . "-" expression
  102           | expression . "*" expression
  103           | expression . "/" expression
  104           | expression . "%" expression
  108           | expression . "near" expression
  109           | expression . "touches" expression

    "touches"  shift, and go to state 113
    "near"     shift, and go to state 114
    "*"        shift, and go to state 116
    "/"        shift, and go to state 117
    "%"        shift, and go to state 118
    "+"        shift, and go to state 119
    "-"        shift, and go to state 120
    "<"        shift, and go to state 121
    ">"        shift, and go to state 122
    "<="       shift, and go to state 123
    ">="       shift, and go to state 124
    "=="       shift, and go to state 125
    "!="       shift, and go to state 126
    "&&"       shift, and go to state 127
    "||"       shift, and go to state 128

    $default  reduce using rule 12 (optional_initializer)


state 98

   25 parameter: "identifier" . "=" expression

    "="  shift, and go to state 130


state 99

   14 object_declaration: object_type "identifier" "(" parameter_list_or_empty . ")"

    ")"  shift, and go to state 131


state 100

   21 parameter_list_or_empty: parameter_list .
   23 parameter_list: parameter_list . "," parameter

    ","  shift, and go to state 132

    $default  reduce using rule 21 (parameter_list_or_empty)


state 101

   24 parameter_list: parameter .

    $default  reduce using rule 24 (parameter_list)


state 102

   22 parameter_list_or_empty: empty .

    $default  reduce using rule 22 (parameter_list_or_empty)


state 103

   15 object_declaration: object_type "identifier" "[" expression . "]"
   92 expression: expression . "||" expression
   93           | expression . "&&" expression
   94           | expression . "<=" expression
   95           | expression . ">=" expression
   96           | expression . "<" expression
   97           | expression . ">" expression
   98           | expression . "==" expression
   99           | expression . "!=" expression
  100           | expression . "+" expression
  101           | expression . "-" expression
  102           | expression . "*" expression
  103           | expression . "/" expression
  104           | expression . "%" expression
  108           | expression . "near" expression
  109           | expression . "touches" expression

    "touches"  shift, and go to state 113
    "near"     shift, and go to state 114
    "]"        shift, and go to state 133
    "*"        shift, and go to state 116
    "/"        shift, and go to state 117
    "%"        shift, and go to state 118
    "+"        shift, and go to state 119
    "-"        shift, and go to state 120
    "<"        shift, and go to state 121
    ">"        shift, and go to state 122
    "<="       shift, and go to state 123
    ">="       shift, and go to state 124
    "=="       shift, and go to state 125
    "!="       shift, and go to state 126
    "&&"       shift, and go to state 127
    "||"       shift, and go to state 128


state 104

   64 statement_block: "{" statement_block_creator . statement_list "}" end_of_statement_block

    $default  reduce using rule 127 (empty)

    statement_list  go to state 134
    empty           go to state 135


state 105

   37 on_block: "on" keystroke statement_block .

    $default  reduce using rule 37 (on_block)


state 106

   35 animation_block: "animation" "identifier" "(" . check_animation_parameter ")" "{" statement_list "}" end_of_statement_block

    "triangle"   shift, and go to state 8
    "pixmap"     shift, and go to state 9
    "circle"     shift, and go to state 10
    "rectangle"  shift, and go to state 11
    "textbox"    shift, and go to state 12

    object_type                go to state 136
    check_animation_parameter  go to state 137


state 107

   26 forward_declaration: "forward" "animation" "identifier" "(" object_type . "identifier" ")"

    "identifier"  shift, and go to state 138


state 108

   92 expression: expression . "||" expression
   93           | expression . "&&" expression
   94           | expression . "<=" expression
   95           | expression . ">=" expression
   96           | expression . "<" expression
   97           | expression . ">" expression
   98           | expression . "==" expression
   99           | expression . "!=" expression
  100           | expression . "+" expression
  101           | expression . "-" expression
  102           | expression . "*" expression
  103           | expression . "/" expression
  104           | expression . "%" expression
  108           | expression . "near" expression
  109           | expression . "touches" expression
  110 primary_expression: "(" expression . ")"

    "touches"  shift, and go to state 113
    "near"     shift, and go to state 114
    ")"        shift, and go to state 139
    "*"        shift, and go to state 116
    "/"        shift, and go to state 117
    "%"        shift, and go to state 118
    "+"        shift, and go to state 119
    "-"        shift, and go to state 120
    "<"        shift, and go to state 121
    ">"        shift, and go to state 122
    "<="       shift, and go to state 123
    ">="       shift, and go to state 124
    "=="       shift, and go to state 125
    "!="       shift, and go to state 126
    "&&"       shift, and go to state 127
    "||"       shift, and go to state 128


state 109

   92 expression: expression . "||" expression
   93           | expression . "&&" expression
   94           | expression . "<=" expression
   95           | expression . ">=" expression
   96           | expression . "<" expression
   97           | expression . ">" expression
   98           | expression . "==" expression
   99           | expression . "!=" expression
  100           | expression . "+" expression
  101           | expression . "-" expression
  102           | expression . "*" expression
  103           | expression . "/" expression
  104           | expression . "%" expression
  105           | "-" expression .
  108           | expression . "near" expression
  109           | expression . "touches" expression

    $default  reduce using rule 105 (expression)


state 110

   92 expression: expression . "||" expression
   93           | expression . "&&" expression
   94           | expression . "<=" expression
   95           | expression . ">=" expression
   96           | expression . "<" expression
   97           | expression . ">" expression
   98           | expression . "==" expression
   99           | expression . "!=" expression
  100           | expression . "+" expression
  101           | expression . "-" expression
  102           | expression . "*" expression
  103           | expression . "/" expression
  104           | expression . "%" expression
  106           | "!" expression .
  108           | expression . "near" expression
  109           | expression . "touches" expression

    $default  reduce using rule 106 (expression)


state 111

   88 variable: "identifier" "[" . expression "]"
   90         | "identifier" "[" . expression "]" "." "identifier"

    "true"             shift, and go to state 74
    "false"            shift, and go to state 75
    "("                shift, and go to state 76
    "-"                shift, and go to state 77
    "sin"              shift, and go to state 78
    "cos"              shift, and go to state 79
    "tan"              shift, and go to state 80
    "asin"             shift, and go to state 81
    "acos"             shift, and go to state 82
    "atan"             shift, and go to state 83
    "sqrt"             shift, and go to state 84
    "floor"            shift, and go to state 85
    "abs"              shift, and go to state 86
    "random"           shift, and go to state 87
    "!"                shift, and go to state 88
    "identifier"       shift, and go to state 89
    "int constant"     shift, and go to state 90
    "double constant"  shift, and go to state 91
    "string constant"  shift, and go to state 92

    variable            go to state 93
    expression          go to state 140
    primary_expression  go to state 95
    math_operator       go to state 96


state 112

   89 variable: "identifier" "." . "identifier"

    "identifier"  shift, and go to state 141


state 113

  109 expression: expression "touches" . expression
